refactored the Listen section + templatized page + fixed a lot of tiny bugs all over the code

--- a/TODO
+++ b/TODO
@@ -1,16 +1,21 @@
 *** REQUIREMENTS ***
 
-- templatized page
+x templatized page
+x localized page
 - nice error page (replace the default exception middleware) to display:
   - liquid errors
   - other exceptions
 - nice logs
-- params to setup the server
+- params to launch the thin server (port, address ?)
 - sessions
 - post content entry
 - listen:
   - make it work for external libs
   - better installation for all the platforms
+  - content types and content entries / site ?
+- translations
+
+- I18n keys
 
 - tests
 
