added Dragonfly and WillPaginate + began to implement the submission of content entries thru a form

--- a/TODO
+++ b/TODO
@@ -2,20 +2,24 @@
 
 x templatized page
 x localized page
+x dragonfly
 - listen:
   x content types and content entries / site
   - make it work for other platforms (linux, windows)
+- post content entry (WIP)
 - I18n keys
 - liquid assigns: sessions (rack)
-- post content entry
 - nice error page (replace the default exception middleware) to display:
   - liquid errors
   - other exceptions
 - nice logs
 - params to launch the thin server (port, address ?)
+- push:
+  - option to select to push only some parts (pages, ...etc)
+  - --force option
+- static js/css assets (non coffeescript or sass files) are not reloaded if got changed.
 
 - translations
-
 
 - tests
 
