--- a/TODO
+++ b/TODO
@@ -15,11 +15,11 @@ x static js/css assets (non coffeescript or sass files) are not reloaded if got 
 x content types / liquid
   x group_contents_by
   x select_names
+x params to launch the thin server (port, address ?)
 - nice error page (replace the default exception middleware) to display:
   - liquid errors
   - other exceptions
 - nice logs
-- params to launch the thin server (port, address ?)
 - commands:
   - create
     - sites
@@ -28,9 +28,11 @@ x content types / liquid
       ? localized
       ? boilerplate
       - copy Bundler / Gemfile (pending)
-    - content types
+    x content types
       x definitions
-      - data (Faker)
+      x data (Faker)
+    - page
+    - snippet
   - push:
     - option to select to push only some parts (pages, ...etc)
     - --force option
@@ -40,9 +42,9 @@ x content types / liquid
   - builder when running it
   - engine when pushing a site
 
-- translations
+- translations (Rod)
 
-- tests
+- tests (Rod/Did)
 
 - refactoring:
   x generators/sites -> generators/site
