--- a/TODO
+++ b/TODO
@@ -31,7 +31,7 @@ x params to launch the thin server (port, address ?)
     x content types
       x definitions
       x data (Faker)
-    - page
+    x page
     - snippet
   - push:
     - option to select to push only some parts (pages, ...etc)
