--- a/locales/it.yml
+++ b/locales/it.yml
@@ -1,4 +1,17 @@
 it:
+  locales:
+    en: Inglese
+    de: Tedesco
+    fr: Francese
+    pl: Polacco
+    pt-BR: "Portoghese Brasiliano"
+    it: Italiano
+    nl: Olandese
+    nb: Norvegese
+    es: Spagnolo
+    ru: Russo
+    et: Estone
+
   errors:
     messages:
       blank: "non può essere lasciato in bianco"
