--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,4 +1,17 @@
 en:
+  locales:
+    en: English
+    de: German
+    fr: French
+    pl: Polish
+    pt-BR: "Brazilian Portuguese"
+    it: Italian
+    nl: Dutch
+    nb: Norwegian
+    es: Spanish
+    ru: Russian
+    et: Estonian
+
   errors:
     messages:
       blank: "can't not blank"
