--- a/locales/nb.yml
+++ b/locales/nb.yml
@@ -1,4 +1,17 @@
 nb:
+  locales:
+    en: Engelsk
+    de: Tysk
+    fr: Fransk
+    pl: Polsk
+    pt-BR: "Brazilian Portuguese"
+    it: Italiensk
+    nl: Nederlandsk
+    nb: Norsk
+    es: Spansk
+    ru: Russisk
+    et: Estisk
+
   date:
     formats:
       default: "%d.%m.%Y"
