--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -1,4 +1,17 @@
 ru:
+  locales:
+    en: Английский
+    de: Немецкий
+    fr: Французский
+    pl: Польский
+    pt-BR: "Браз. - Португальский"
+    it: Итальянский
+    nl: Голландский
+    nb: Норвежский
+    es: Испанский
+    ru: Русский
+    et: Эстонский
+
   errors:
     messages:
       blank: "can not be blank"
