better_error instead of rack::exception + fix issue #13 + refactor the specs

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -14,7 +14,7 @@ en:
 
   errors:
     messages:
-      blank: "can't not blank"
+      blank: "can't not be blank"
 
   pagination:
     previous: "&laquo; Previous"
