--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -1,16 +1,18 @@
 fr:
-  locales:
-    en: Anglais
-    de: Allemand
-    fr: Français
-    pl: Polonais
-    pt-BR: "Portugais"
-    it: "Italien"
-    nl: "Hollandais"
-    nb: "Norvégien"
-    es: Espagnol
-    ru: Russe
-    et: Estonien
+  locomotive:
+    locales:
+      en: Anglais
+      de: Allemand
+      fr: Français
+      pl: Polonais
+      pt-BR: "Portugais"
+      it: "Italien"
+      nl: "Hollandais"
+      nb: "Norvégien"
+      es: Espagnol
+      ru: Russe
+      et: Estonien
+      ja: Japonais
 
   errors:
     messages:
