--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -1,14 +1,15 @@
 nl:
-  locales:
-    en: Engels
-    de: Duits
-    fr: Frans
-    pt-BR: "Braziliaans Portugees"
-    it: Italiaans
-    nl: Nederlands
-    nb: Noors
-    ru: Russisch
-    et: Estlands
+  locomotive:
+    locales:
+      en: Engels
+      de: Duits
+      fr: Frans
+      pt-BR: "Braziliaans Portugees"
+      it: Italiaans
+      nl: Nederlands
+      nb: Noors
+      ru: Russisch
+      et: Estlands
 
   errors:
     messages:
