--- a/locales/pt-BR.yml
+++ b/locales/pt-BR.yml
@@ -1,16 +1,17 @@
 pt-BR:
-  locales:
-    en: Inglês
-    de: Alemão
-    fr: Francês
-    pl: Polonês
-    pt-BR: "Português do Brasil"
-    it: Italiano
-    nl: Holandês
-    nb: Norueguês
-    es: Espanhol
-    ru: Russo
-    et: Estoniano
+  locomotive:
+    locales:
+      en: Inglês
+      de: Alemão
+      fr: Francês
+      pl: Polonês
+      pt-BR: "Português do Brasil"
+      it: Italiano
+      nl: Holandês
+      nb: Norueguês
+      es: Espanhol
+      ru: Russo
+      et: Estoniano
 
   errors:
     messages:
